# Energy-hub

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
etl/: create_views.sql  load_all.py  load_boundaries.py  load_infra.py  load_landcover.py  load_pv_facility.py  load_rps.py  load_stations.py  setup_fdw.sql  verify_all.sql
etl/schema/: energy_hub_ddl.sql
research/: .gitignore
research/notebooks/: 00_data_export.ipynb  01_grid_build.ipynb  02_feature_matrix.ipynb  03_ahp_prior.ipynb  04_model.ipynb  05_reconstruction.ipynb  06_validation.ipynb
research/plan/: add  ahp_variable_review.md  research_v1.md  research_v2.md  research_v3.md
src/: .env.example  docker-compose.yml
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: config.py  main.py
src/backend/app/api/v1/: demand.py  generation.py  landcover.py  map.py  router.py  search.py  site.py  stats.py  weather.py
src/backend/app/db/: session.py
src/backend/app/models/: __init__.py  landcover.py  pv.py  region.py  weather.py
src/backend/app/schemas/: common.py  demand.py  map.py  site.py  stats.py
src/backend/app/utils/: cache.py  geo.py
src/frontend/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  main.tsx
src/frontend/src/api/: client.ts  demandApi.ts  generationApi.ts  mapApi.ts  siteApi.ts  statsApi.ts  types.ts
src/frontend/src/hooks/: usePolling.ts
src/frontend/src/stores/: mapStore.ts  searchStore.ts  uiStore.ts
src/martin/: martin.yaml
src/nginx/: nginx.conf
(+18 files in other folders)
