[project]
name = "pv-profile-augmentation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "folium>=0.20.0",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "polars>=1.38.1",
    "psycopg2-binary>=2.9.9",
    "requests>=2.32.5",
    "topojson>=1.10",
]
