[project]
name = "energy-hub-backend"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.15.0",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "cachetools>=5.5.0",
    "redis[hiredis]>=5.0.0",
    "orjson>=3.9.0",
    "polars>=1.0.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
